2007-08-14  Brian Nickel <brian.nickel@gmail.com>
	* src/TagLib/Mpeg/XingHeader.cs: Add XingHeader.FileIdentifier to speed
	things up.
	
	* src/TagLib/Mpeg/AudioHeader.cs: Fully document, reformat and add a
	check for the Xing identifier before calling the constructor to avoid an
	unnecessary exception/try/catch.
	
	* src/TagLib/ICodec.cs: Correct some documentation.
	
	* src/TagLib/Properties.cs:
	* src/TagLib/SupportedMimeType.cs:
	* src/TagLib/StringList.cs:
	* src/TagLib/FileTypes.cs: Correct for documentation compiler warning.
	
	* taglib-sharp.csproj: Added PopularimeterFrame.cs

svn path=/trunk/taglib-sharp/; revision=84123

--- a/taglib-sharp.csproj
+++ b/taglib-sharp.csproj
@@ -41,34 +41,72 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="src\AssemblyInfo.cs" />
-    <Compile Include="src\TagLib\Tag.cs" />
+    <Compile Include="src\TagLib\Ape\Footer.cs" />
+    <Compile Include="src\TagLib\Ape\Item.cs" />
+    <Compile Include="src\TagLib\Ape\Tag.cs" />
+    <Compile Include="src\TagLib\Asf\ContentDescriptionObject.cs" />
+    <Compile Include="src\TagLib\Asf\ContentDescriptor.cs" />
+    <Compile Include="src\TagLib\Asf\ExtendedContentDescriptionObject.cs" />
+    <Compile Include="src\TagLib\Asf\File.cs" />
+    <Compile Include="src\TagLib\Asf\FilePropertiesObject.cs" />
+    <Compile Include="src\TagLib\Asf\Guid.cs" />
+    <Compile Include="src\TagLib\Asf\HeaderExtensionObject.cs" />
+    <Compile Include="src\TagLib\Asf\HeaderObject.cs" />
+    <Compile Include="src\TagLib\Asf\Object.cs" />
+    <Compile Include="src\TagLib\Asf\PaddingObject.cs" />
+    <Compile Include="src\TagLib\Asf\StreamPropertiesObject.cs" />
+    <Compile Include="src\TagLib\Asf\Tag.cs" />
+    <Compile Include="src\TagLib\Asf\UnknownObject.cs" />
     <Compile Include="src\TagLib\ByteVector.cs" />
-    <Compile Include="src\TagLib\ReadOnlyByteVector.cs" />
     <Compile Include="src\TagLib\ByteVectorList.cs" />
     <Compile Include="src\TagLib\CombinedTag.cs" />
+    <Compile Include="src\TagLib\CorruptFileException.cs" />
     <Compile Include="src\TagLib\File.cs" />
-    <Compile Include="src\TagLib\StringList.cs" />
-    <Compile Include="src\TagLib\SupportedMimeType.cs" />
-    <Compile Include="src\TagLib\UnsupportedFormatException.cs" />
-    <Compile Include="src\TagLib\WavPack\File.cs" />
-    <Compile Include="src\TagLib\WavPack\StreamHeader.cs" />
-    <Compile Include="src\TagLib\Ogg\File.cs" />
-    <Compile Include="src\TagLib\Ogg\Page.cs" />
-    <Compile Include="src\TagLib\Ogg\PageHeader.cs" />
-    <Compile Include="src\TagLib\Ogg\XiphComment.cs" />
+    <Compile Include="src\TagLib\FileTypes.cs" />
+    <Compile Include="src\TagLib\Flac\Block.cs" />
+    <Compile Include="src\TagLib\Flac\BlockHeader.cs" />
+    <Compile Include="src\TagLib\Flac\File.cs" />
+    <Compile Include="src\TagLib\Flac\Picture.cs" />
+    <Compile Include="src\TagLib\Flac\StreamHeader.cs" />
+    <Compile Include="src\TagLib\Genres.cs" />
+    <Compile Include="src\TagLib\ICodec.cs" />
+    <Compile Include="src\TagLib\Id3v1\StringHandler.cs" />
+    <Compile Include="src\TagLib\Id3v1\Tag.cs" />
+    <Compile Include="src\TagLib\Id3v2\ExtendedHeader.cs" />
+    <Compile Include="src\TagLib\Id3v2\Footer.cs" />
+    <Compile Include="src\TagLib\Id3v2\Frame.cs" />
+    <Compile Include="src\TagLib\Id3v2\FrameFactory.cs" />
+    <Compile Include="src\TagLib\Id3v2\FrameHeader.cs" />
+    <Compile Include="src\TagLib\Id3v2\Frames\AttachedPictureFrame.cs" />
+    <Compile Include="src\TagLib\Id3v2\Frames\CommentsFrame.cs" />
+    <Compile Include="src\TagLib\Id3v2\Frames\GeneralEncapsulatedObjectFrame.cs" />
+    <Compile Include="src\TagLib\Id3v2\Frames\MusicCdIdentifierFrame.cs" />
+    <Compile Include="src\TagLib\Id3v2\Frames\PlayCountFrame.cs" />
+    <Compile Include="src\TagLib\Id3v2\Frames\PopularimeterFrame.cs" />
+    <Compile Include="src\TagLib\Id3v2\Frames\PrivateFrame.cs" />
+    <Compile Include="src\TagLib\Id3v2\Frames\RelativeVolumeFrame.cs" />
+    <Compile Include="src\TagLib\Id3v2\Frames\SynchronizedLyricsFrame.cs" />
+    <Compile Include="src\TagLib\Id3v2\Frames\TermsOfUseFrame.cs" />
+    <Compile Include="src\TagLib\Id3v2\Frames\TextIdentificationFrame.cs" />
+    <Compile Include="src\TagLib\Id3v2\Frames\UniqueFileIdentifierFrame.cs" />
+    <Compile Include="src\TagLib\Id3v2\Frames\UnknownFrame.cs" />
+    <Compile Include="src\TagLib\Id3v2\Frames\UnsynchronisedLyricsFrame.cs" />
+    <Compile Include="src\TagLib\Id3v2\FrameTypes.cs" />
+    <Compile Include="src\TagLib\Id3v2\Header.cs" />
+    <Compile Include="src\TagLib\Id3v2\SynchData.cs" />
+    <Compile Include="src\TagLib\Id3v2\Tag.cs" />
+    <Compile Include="src\TagLib\ListBase.cs" />
+    <Compile Include="src\TagLib\Mpc\File.cs" />
+    <Compile Include="src\TagLib\Mpc\StreamHeader.cs" />
     <Compile Include="src\TagLib\Mpeg4\AppleTag.cs" />
-    <Compile Include="src\TagLib\Mpeg4\BoxHeader.cs" />
-    <Compile Include="src\TagLib\Mpeg4\BoxFactory.cs" />
     <Compile Include="src\TagLib\Mpeg4\Box.cs" />
-    <Compile Include="src\TagLib\Mpeg4\FileParser.cs" />
-    <Compile Include="src\TagLib\Mpeg4\BoxTypes.cs" />
-    <Compile Include="src\TagLib\Mpeg4\File.cs" />
     <Compile Include="src\TagLib\Mpeg4\Boxes\AppleAdditionalInfoBox.cs" />
     <Compile Include="src\TagLib\Mpeg4\Boxes\AppleAnnotationBox.cs" />
     <Compile Include="src\TagLib\Mpeg4\Boxes\AppleDataBox.cs" />
     <Compile Include="src\TagLib\Mpeg4\Boxes\AppleElementaryStreamDescriptor.cs" />
     <Compile Include="src\TagLib\Mpeg4\Boxes\AppleItemListBox.cs" />
     <Compile Include="src\TagLib\Mpeg4\Boxes\FullBox.cs" />
+    <Compile Include="src\TagLib\Mpeg4\Boxes\IsoAudioSampleEntry.cs" />
     <Compile Include="src\TagLib\Mpeg4\Boxes\IsoChunkLargeOffsetBox.cs" />
     <Compile Include="src\TagLib\Mpeg4\Boxes\IsoChunkOffsetBox.cs" />
     <Compile Include="src\TagLib\Mpeg4\Boxes\IsoFreeSpaceBox.cs" />
@@ -77,107 +115,70 @@
     <Compile Include="src\TagLib\Mpeg4\Boxes\IsoMovieHeaderBox.cs" />
     <Compile Include="src\TagLib\Mpeg4\Boxes\IsoSampleDescriptionBox.cs" />
     <Compile Include="src\TagLib\Mpeg4\Boxes\IsoSampleEntry.cs" />
-    <Compile Include="src\TagLib\Mpeg4\Boxes\IsoAudioSampleEntry.cs" />
-    <Compile Include="src\TagLib\Mpeg4\Boxes\IsoVisualSampleEntry.cs" />
     <Compile Include="src\TagLib\Mpeg4\Boxes\IsoSampleTableBox.cs" />
     <Compile Include="src\TagLib\Mpeg4\Boxes\IsoUserDataBox.cs" />
+    <Compile Include="src\TagLib\Mpeg4\Boxes\IsoVisualSampleEntry.cs" />
     <Compile Include="src\TagLib\Mpeg4\Boxes\UnknownBox.cs" />
+    <Compile Include="src\TagLib\Mpeg4\BoxFactory.cs" />
+    <Compile Include="src\TagLib\Mpeg4\BoxHeader.cs" />
+    <Compile Include="src\TagLib\Mpeg4\BoxTypes.cs" />
+    <Compile Include="src\TagLib\Mpeg4\File.cs" />
+    <Compile Include="src\TagLib\Mpeg4\FileParser.cs" />
     <Compile Include="src\TagLib\Mpeg\AudioFile.cs" />
     <Compile Include="src\TagLib\Mpeg\AudioHeader.cs" />
     <Compile Include="src\TagLib\Mpeg\File.cs" />
     <Compile Include="src\TagLib\Mpeg\VideoHeader.cs" />
     <Compile Include="src\TagLib\Mpeg\XingHeader.cs" />
-    <Compile Include="src\TagLib\Mpc\File.cs" />
-    <Compile Include="src\TagLib\Mpc\StreamHeader.cs" />
     <Compile Include="src\TagLib\NonContainer\EndTag.cs" />
     <Compile Include="src\TagLib\NonContainer\File.cs" />
     <Compile Include="src\TagLib\NonContainer\StartTag.cs" />
     <Compile Include="src\TagLib\NonContainer\Tag.cs" />
-    <Compile Include="src\TagLib\Id3v2\ExtendedHeader.cs" />
-    <Compile Include="src\TagLib\Id3v2\Footer.cs" />
-    <Compile Include="src\TagLib\Id3v2\Frame.cs" />
-    <Compile Include="src\TagLib\Id3v2\FrameTypes.cs" />
-    <Compile Include="src\TagLib\Id3v2\FrameFactory.cs" />
-    <Compile Include="src\TagLib\Id3v2\FrameHeader.cs" />
-    <Compile Include="src\TagLib\Id3v2\Header.cs" />
-    <Compile Include="src\TagLib\Id3v2\SynchData.cs" />
-    <Compile Include="src\TagLib\Id3v2\Tag.cs" />
-    <Compile Include="src\TagLib\Id3v2\Frames\UnknownFrame.cs" />
-    <Compile Include="src\TagLib\Id3v2\Frames\AttachedPictureFrame.cs" />
-    <Compile Include="src\TagLib\Id3v2\Frames\CommentsFrame.cs" />
-    <Compile Include="src\TagLib\Id3v2\Frames\GeneralEncapsulatedObjectFrame.cs" />
-    <Compile Include="src\TagLib\Id3v2\Frames\PrivateFrame.cs" />
-    <Compile Include="src\TagLib\Id3v2\Frames\RelativeVolumeFrame.cs" />
-    <Compile Include="src\TagLib\Id3v2\Frames\TextIdentificationFrame.cs" />
-    <Compile Include="src\TagLib\Id3v2\Frames\UniqueFileIdentifierFrame.cs" />
-    <Compile Include="src\TagLib\Id3v2\Frames\UnsynchronisedLyricsFrame.cs" />
-    <Compile Include="src\TagLib\Id3v2\Frames\SynchronizedLyricsFrame.cs" />
-    <Compile Include="src\TagLib\Id3v1\StringHandler.cs" />
-    <Compile Include="src\TagLib\Id3v1\Tag.cs" />
-    <Compile Include="src\TagLib\Flac\Block.cs" />
-    <Compile Include="src\TagLib\Flac\BlockHeader.cs" />
-    <Compile Include="src\TagLib\Flac\File.cs" />
-    <Compile Include="src\TagLib\Flac\Picture.cs" />
-    <Compile Include="src\TagLib\Flac\StreamHeader.cs" />
-    <Compile Include="src\TagLib\Ape\Tag.cs" />
-    <Compile Include="src\TagLib\Ape\Footer.cs" />
-    <Compile Include="src\TagLib\Ape\Item.cs" />
-    <Compile Include="src\TagLib\Asf\ContentDescriptionObject.cs" />
-    <Compile Include="src\TagLib\Asf\File.cs" />
-    <Compile Include="src\TagLib\Asf\HeaderObject.cs" />
-    <Compile Include="src\TagLib\Asf\HeaderExtensionObject.cs" />
-    <Compile Include="src\TagLib\Asf\UnknownObject.cs" />
-    <Compile Include="src\TagLib\Asf\ContentDescriptor.cs" />
-    <Compile Include="src\TagLib\Asf\FilePropertiesObject.cs" />
-    <Compile Include="src\TagLib\Asf\Object.cs" />
-    <Compile Include="src\TagLib\Asf\StreamPropertiesObject.cs" />
-    <Compile Include="src\TagLib\Asf\ExtendedContentDescriptionObject.cs" />
-    <Compile Include="src\TagLib\Asf\Guid.cs" />
-    <Compile Include="src\TagLib\Asf\PaddingObject.cs" />
-    <Compile Include="src\TagLib\Asf\Tag.cs" />
-    <Compile Include="src\TagLib\ListBase.cs" />
-    <Compile Include="src\TagLib\Picture.cs" />
-    <Compile Include="src\TagLib\CorruptFileException.cs" />
-    <Compile Include="src\TagLib\FileTypes.cs" />
-    <Compile Include="src\TagLib\Properties.cs" />
-    <Compile Include="src\TagLib\Ogg\Codecs\Vorbis.cs" />
     <Compile Include="src\TagLib\Ogg\Bitstream.cs" />
     <Compile Include="src\TagLib\Ogg\Codec.cs" />
-    <Compile Include="src\TagLib\Ogg\GroupedComment.cs" />
-    <Compile Include="src\TagLib\Ogg\Paginator.cs" />
     <Compile Include="src\TagLib\Ogg\Codecs\Theora.cs" />
-    <Compile Include="src\TagLib\Riff\File.cs" />
-    <Compile Include="src\TagLib\Riff\DivXTag.cs" />
-    <Compile Include="src\TagLib\Riff\ListTag.cs" />
-    <Compile Include="src\TagLib\Riff\InfoTag.cs" />
-    <Compile Include="src\TagLib\Genres.cs" />
-    <Compile Include="src\TagLib\Riff\MovieIdTag.cs" />
-    <Compile Include="src\TagLib\Riff\List.cs" />
+    <Compile Include="src\TagLib\Ogg\Codecs\Vorbis.cs" />
+    <Compile Include="src\TagLib\Ogg\File.cs" />
+    <Compile Include="src\TagLib\Ogg\GroupedComment.cs" />
+    <Compile Include="src\TagLib\Ogg\Page.cs" />
+    <Compile Include="src\TagLib\Ogg\PageHeader.cs" />
+    <Compile Include="src\TagLib\Ogg\Paginator.cs" />
+    <Compile Include="src\TagLib\Ogg\XiphComment.cs" />
+    <Compile Include="src\TagLib\Picture.cs" />
+    <Compile Include="src\TagLib\Properties.cs" />
+    <Compile Include="src\TagLib\ReadOnlyByteVector.cs" />
     <Compile Include="src\TagLib\Riff\AviHeaderList.cs" />
     <Compile Include="src\TagLib\Riff\AviStream.cs" />
-    <Compile Include="src\TagLib\Riff\WaveFormatEx.cs" />
     <Compile Include="src\TagLib\Riff\BitmapInfoHeader.cs" />
-    <Compile Include="src\TagLib\ICodec.cs" />
-    <Compile Include="src\TagLib\Id3v2\Frames\PlayCountFrame.cs" />
-    <Compile Include="src\TagLib\Id3v2\Frames\MusicCdIdentifierFrame.cs" />
-    <Compile Include="src\TagLib\Id3v2\Frames\TermsOfUseFrame.cs" />
+    <Compile Include="src\TagLib\Riff\DivXTag.cs" />
+    <Compile Include="src\TagLib\Riff\File.cs" />
+    <Compile Include="src\TagLib\Riff\InfoTag.cs" />
+    <Compile Include="src\TagLib\Riff\List.cs" />
+    <Compile Include="src\TagLib\Riff\ListTag.cs" />
+    <Compile Include="src\TagLib\Riff\MovieIdTag.cs" />
+    <Compile Include="src\TagLib\Riff\WaveFormatEx.cs" />
+    <Compile Include="src\TagLib\StringList.cs" />
+    <Compile Include="src\TagLib\SupportedMimeType.cs" />
+    <Compile Include="src\TagLib\Tag.cs" />
+    <Compile Include="src\TagLib\UnsupportedFormatException.cs" />
+    <Compile Include="src\TagLib\WavPack\File.cs" />
+    <Compile Include="src\TagLib\WavPack\StreamHeader.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="src" />
     <Folder Include="src\TagLib" />
-    <Folder Include="src\TagLib\Asf" />
     <Folder Include="src\TagLib\Ape" />
+    <Folder Include="src\TagLib\Asf" />
     <Folder Include="src\TagLib\Flac" />
     <Folder Include="src\TagLib\Id3v1" />
     <Folder Include="src\TagLib\Id3v2" />
-    <Folder Include="src\TagLib\Riff" />
+    <Folder Include="src\TagLib\Id3v2\Frames" />
     <Folder Include="src\TagLib\Mpc" />
-    <Folder Include="src\TagLib\Ogg" />
-    <Folder Include="src\TagLib\Ogg\Codecs" />
+    <Folder Include="src\TagLib\Mpeg" />
     <Folder Include="src\TagLib\Mpeg4" />
     <Folder Include="src\TagLib\Mpeg4\Boxes" />
-    <Folder Include="src\TagLib\Mpeg" />
-    <Folder Include="src\TagLib\Id3v2\Frames" />
+    <Folder Include="src\TagLib\Ogg" />
+    <Folder Include="src\TagLib\Ogg\Codecs" />
+    <Folder Include="src\TagLib\Riff" />
     <Content Include="taglib-sharp.snk" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.Targets" />
