2007-08-17  Brian Nickel <brian.nickel@gmail.com>
	* src/TagLib/Mpeg/AudioHeader.cs: Go back to setting XingHeader early,
	there are just too many things that depend on `this'. (Thanks to jmurphy
	for the bug report.)
	
	* src/TagLib/Ape/Tag.cs: Support APEv2 cover pictures. (Thanks to
	renzska for the feature request.)
	
	* src/TagLib/Picture.cs: Add new constructors, obsolete CreateFromFile
	and CreateFromPath, detect GIF and BMP files.
	
	* src/TagLib/NonContainer/EndTag.cs: Check that the footer contains
	sane values.

	* configure.ac: Now 2.0.2.9. Remove pkgconfig check for Mono. It isn't
	really needed.

2007-08-16  Brian Nickel <brian.nickel@gmail.com>

	* src/TagLib/Asf/Tag.cs:
	* src/TagLib/Asf/File.cs:
	* src/TagLib/Asf/HeaderObject.cs:
	* src/TagLib/Asf/DescriptionRecord.cs:
	* src/TagLib/Asf/MetadataLibraryObject.cs:
	* src/TagLib/Asf/ContentDescriptor.cs: Added support for the ASF
	Metadata Library Object. This object supports content descriptors as big
	as uint.MaxValue as opposed to ushort.MaxValue. Tag.Pictures now reads
	from this source as well, and large pictures are now written to it. They
	were previously ignored. (Thanks to renzska for the bug report.)

	* src/TagLib/TagLib.sources:
	* src/taglib-sharp.mdp:
	* taglib-sharp.csproj: Added new files.
	
	* configure.ac: Now 2.0.2.8

svn path=/trunk/taglib-sharp/; revision=84339

--- a/configure.ac
+++ b/configure.ac
@@ -3,7 +3,7 @@ AC_CANONICAL_SYSTEM
 
 ASSEMBLY_NAME="taglib-sharp"
 
-VERSION="2.0.2.7"
+VERSION="2.0.2.9"
 ASSEMBLY_VERSION="$VERSION"
 
 POLICY_2_0_VERSIONS="2.0.0.0-$ASSEMBLY_VERSION"
@@ -19,7 +19,6 @@ AM_MAINTAINER_MODE
 
 AC_PROG_INSTALL
 
-MONO_REQUIRED=1.1
 MONODOC_REQUIRED=1.1.9
 
 WINDIR="$ASSEMBLY_NAME-$VERSION-windows"
@@ -28,13 +27,12 @@ AC_SUBST(WINDIR)
 DISTCHECK_CONFIGURE_FLAGS="--disable-docs"
 AC_SUBST(DISTCHECK_CONFIGURE_FLAGS)
 
-PKG_CHECK_MODULES(MONO, mono >= $MONO_REQUIRED)
-
 dnl Check for Mono
 AC_PATH_PROG(MCS, gmcs)
 if test x$MCS = x; then
 	AC_MSG_ERROR(You need mcs)
 fi
+
 AC_PATH_PROG(MONO, mono)
 if test x$MONO = x; then
 	AC_MSG_ERROR(You need mono)
@@ -62,6 +60,8 @@ GACUTIL_POLICY_FLAGS='/gacdir $(libdir) /root $(DESTDIR)$(libdir)'
 AC_SUBST(GACUTIL_POLICY_FLAGS)
 
 AC_ARG_ENABLE(docs, AC_HELP_STRING([--disable-docs], [Do not build documentation]), with_docs=no, with_docs=yes)
+
+PKG_PROG_PKG_CONFIG
 
 dnl Monodoc
 if test "x$with_docs" = "xyes"; then
