--- a/taglib-sharp.csproj
+++ b/taglib-sharp.csproj
@@ -46,12 +46,14 @@
     <Compile Include="src\TagLib\Ape\Tag.cs" />
     <Compile Include="src\TagLib\Asf\ContentDescriptionObject.cs" />
     <Compile Include="src\TagLib\Asf\ContentDescriptor.cs" />
+    <Compile Include="src\TagLib\Asf\DescriptionRecord.cs" />
     <Compile Include="src\TagLib\Asf\ExtendedContentDescriptionObject.cs" />
     <Compile Include="src\TagLib\Asf\File.cs" />
     <Compile Include="src\TagLib\Asf\FilePropertiesObject.cs" />
     <Compile Include="src\TagLib\Asf\Guid.cs" />
     <Compile Include="src\TagLib\Asf\HeaderExtensionObject.cs" />
     <Compile Include="src\TagLib\Asf\HeaderObject.cs" />
+    <Compile Include="src\TagLib\Asf\MetadataLibraryObject.cs" />
     <Compile Include="src\TagLib\Asf\Object.cs" />
     <Compile Include="src\TagLib\Asf\PaddingObject.cs" />
     <Compile Include="src\TagLib\Asf\StreamPropertiesObject.cs" />
