2008-01-03  Brian Nickel <brian.nickel@gmail.com>
	*  src/Makefile.am: Generate taglib-sharp.dll.xml instead.
	*  docs/Package.en.xml.in: Contains missing documentation and rules for
	XmlInjector.exe.
	
	*  docs/XmlInjector.cs: A new XML manager which can remove, replace, and
	insert nodes into an XML document based on XPath queries.
	
	*  docs/Makefile.am: Build XML from the slashdoc and use XmlInjector.exe
	to insert missing parts into documentation as well as modify monodoc.xml
	
	*  docs/Package.en.xml: Depreciated by docs/Package.en.xml.in.
	
	*  docs/MonodocNodeConfig.cs: Depreciated by docs/XmlInjector.cs.
	
	*  configure.ac: Generate docs/Package.en.xml from
	docs/Package.en.xml.in

svn path=/trunk/taglib-sharp/; revision=92157

--- a/configure.ac
+++ b/configure.ac
@@ -105,6 +105,7 @@ src/AssemblyInfo.cs
 src/policy.2.0.taglib-sharp.config
 examples/Makefile
 docs/Makefile
+docs/Package.en.xml
 ])
 
 echo "TagLib# ($ASSEMBLY_NAME-$ASSEMBLY_VERSION) is ready to be compiled."
