2008-12-11  Gabriel Burt  <gabriel.burt@gmail.com>
	* src/AssemblyInfo.cs.in: remove the if #SIGN - always sign

	* tests/Makefile.am: Fix up source files list.

	* tests/tests.mdp: enable Makefile integration

	* configure.ac: Uncomment the nunit check and generate tests/Makefile

svn path=/trunk/taglib-sharp/; revision=121363

--- a/configure.ac
+++ b/configure.ac
@@ -91,11 +91,11 @@ else
 	AM_CONDITIONAL(HAVE_GNOME_SHARP, false)
 fi
 
-#PKG_CHECK_MODULES(MONO_NUNIT, mono-nunit >= 1.0, do_tests="yes", do_tests="no") AC_SUBST(MONO_NUNIT_LIBS)
-#AM_CONDITIONAL(ENABLE_TESTS, test "x$do_tests" = "xyes")
-#if test "x$do_tests" = "xno"; then
-#	AC_MSG_WARN([Could not find mono-nunit: tests will not be available.])
-#fi
+PKG_CHECK_MODULES(MONO_NUNIT, mono-nunit >= 1.0, do_tests="yes", do_tests="no") AC_SUBST(MONO_NUNIT_LIBS)
+AM_CONDITIONAL(ENABLE_TESTS, test "x$do_tests" = "xyes")
+if test "x$do_tests" = "xno"; then
+	AC_MSG_WARN([Could not find mono-nunit: tests will not be available.])
+fi
 
 AC_OUTPUT([
 Makefile
@@ -106,6 +106,7 @@ src/policy.2.0.taglib-sharp.config
 examples/Makefile
 docs/Makefile
 docs/Package.en.xml
+tests/Makefile
 ])
 
 echo "TagLib# ($ASSEMBLY_NAME-$ASSEMBLY_VERSION) is ready to be compiled."
