2008-12-11  Gabriel Burt  <gabriel.burt@gmail.com>
	* tests/ConsoleUi.cs:
	* tests/Makefile.am:
	* configure.ac: Remove ConsoleUi in favor of system-installed
	nunit-console2.  Make the tests depend on the taglib-sharp.dll, and rename
	the target 'test'.

	* Makefile.am: Add 'test' target that calls make test in tests/


svn path=/trunk/taglib-sharp/; revision=121368

--- a/Makefile.am
+++ b/Makefile.am
@@ -30,6 +30,9 @@ MAINTAINERCLEANFILES = \
 	config.guess \
 	mkinstalldirs
 
+test:
+	pushd tests; make test; popd;
+
 distwin: all
 	mkdir -p $(srcdir)/$(WINDIR)
 	cp $(srcdir)/NEWS $(srcdir)/$(WINDIR)/NEWS.txt
