--- a/configure.ac
+++ b/configure.ac
@@ -95,6 +95,9 @@ PKG_CHECK_MODULES(MONO_NUNIT, mono-nunit >= 1.0, do_tests="yes", do_tests="no") 
 AM_CONDITIONAL(ENABLE_TESTS, test "x$do_tests" = "xyes")
 if test "x$do_tests" = "xno"; then
 	AC_MSG_WARN([Could not find mono-nunit: tests will not be available.])
+else
+	AC_PATH_PROG(NUNIT_CMD, nunit-console2, no)
+	AC_SUBST(NUNIT_CMD)
 fi
 
 AC_OUTPUT([
