--- a/configure.ac
+++ b/configure.ac
@@ -1,21 +1,17 @@
-AC_INIT(src/TagLib/File.cs)
+AC_INIT([taglib-sharp], [2.0.3.1])
+AM_INIT_AUTOMAKE([1.9 dist-bzip2 tar-ustar])
+AM_MAINTAINER_MODE
 AC_CANONICAL_SYSTEM
 
-ASSEMBLY_NAME="taglib-sharp"
-
-VERSION="2.0.3.1"
+ASSEMBLY_NAME="$PACKAGE"
 ASSEMBLY_VERSION="$VERSION"
 
 POLICY_2_0_VERSIONS="2.0.0.0-$ASSEMBLY_VERSION"
 AC_SUBST(POLICY_2_0_VERSIONS)
 
-
 AC_SUBST(VERSION)
 AC_SUBST(ASSEMBLY_VERSION)
 AC_SUBST(ASSEMBLY_NAME)
-
-AM_INIT_AUTOMAKE($ASSEMBLY_NAME, $VERSION)
-AM_MAINTAINER_MODE
 
 AC_PROG_INSTALL
 
