2009-01-23  Aaron Bockover  <abock@gnome.org>
    * Makefile.am: Install .pc file to datadir since we're noarch


svn path=/trunk/taglib-sharp/; revision=124369

--- a/Makefile.am
+++ b/Makefile.am
@@ -5,7 +5,7 @@ SUBDIRS = \
    tests
 
 pkgconfig_in_files = taglib-sharp.pc.in
-pkgconfigdir = $(libdir)/pkgconfig
+pkgconfigdir = $(datadir)/pkgconfig
 pkgconfig_DATA = $(pkgconfig_in_files:.pc.in=.pc)
 
 EXTRA_DIST =             \
