2009-02-11  Gabriel Burt  <gabriel.burt@gmail.com>
	Patches from Bertrand Lorentz.

	* tests/Makefile.am: fixes the typo that caused the test source files not
	to be included in the tarball (BGO #569299)

	* configure.ac: remove the call to AC_CANONICAL_SYSTEM (BGO #571361)


svn path=/trunk/taglib-sharp/; revision=126670

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -44,7 +44,7 @@ CLEANFILES = $(ASSEMBLY) TestResult.xml *.mdb *.dll *.exe
 DISTCLEANFILES = *.pidb
 MAINTAINERCLEANFILES = Makefile.in
 EXTRA_DIST = \
-	$(ASSEMBLY_CS_FILES) \
+	$(ASSEMBLY_CSFILES) \
 	$(srcdir)/samples/* \
 	$(srcdir)/samples/unsupported/*
 
