2009-02-19  Gabriel Burt  <gabriel.burt@gmail.com>
	* docs/Makefile.am: Patch from Bertrand Lorentz fixing hardcoded mcs
	reference (BGO #572450)


svn path=/trunk/taglib-sharp/; revision=127441

--- a/docs/Makefile.am
+++ b/docs/Makefile.am
@@ -8,7 +8,7 @@ if BUILD_DOCS
 all: XmlInjector.exe
 
 XmlInjector.exe: XmlInjector.cs
-	mcs -out:$@ -r:System.Xml $<
+	$(MCS) -out:$@ -r:System.Xml $<
 
 monodocdir = $(DESTDIR)$(DOCDIR)
 monodoc_DATA = \
